[project]
name = "cc-slack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.58",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "slack-bolt>=1.28.0",
]
